--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -23,6 +23,15 @@
         <groupId>org.mortbay.jetty</groupId>
         <artifactId>jetty-maven-plugin</artifactId>
       </plugin>
+             <plugin>
+      <groupId>org.apache.tomcat.maven</groupId>
+      <artifactId>tomcat7-maven-plugin</artifactId>
+      <version>2.2</version>
+      <configuration>
+        <path>/webapp</path>
+        <port>8081</port>
+      </configuration>
+    </plugin>
     </plugins>
   </build>
 
